--- a/index.html
+++ b/index.html
@@ -26,6 +26,15 @@
         </nav>
     </header>
 
+    <main class="container">
+        <div id="trouver">
+            <h3>Nous Trouver</h3>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5312.075437088578!2d3.255274884335566!3d48.26364866699537!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47ef10d0b71ee987%3A0x63f9503a443fe40!2s7%20Rue%20des%20Ramoneds%2C%2089140%20%C3%89vry!5e0!3m2!1sfr!2sfr!4v1734001783672!5m2!1sfr!2sfr" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            <p>7 Rue des Ramoneds<br>89140 ÉVRY</p>
+            <a href="#">CONTACTER</a>
+        </div>
+    </main>
+
     <script type="text/javascript" src="./scripts/jquery-1.9.0.min.js"></script>
     <script type="text/javascript">
         $('#bandeau .fa-bars').click(function () {
