add css/html : footer

--- a/index.html
+++ b/index.html
@@ -35,6 +35,28 @@
         </div>
     </main>
 
+    <footer class="container">
+        <div id="planSite">
+            <ul>
+                <li><a href="#">Accueil</a></li>
+                <li><a href="#">Visiter</a></li>
+                <li><a href="#">Hébergement</a></li>
+                <li><a href="#">Réserver en ligne</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+        </div>
+        <div id="legal">
+            <ul>
+                <li><a href="#">© 2024 - La Ferme de Flo - Tous droits réservés</a></li>
+                <li><a href="#">Condition d'utilisation</a></li>
+                <li><a href="#">Utilisation des cookies</a></li>
+                <li><a href="#">Mentions légale</a></li>
+                <li><a href="#">Réserver en ligne</a></li>
+                <li><a href="#">Desigend by Edern FERLICOT</a></li>
+            </ul>
+        </div>
+    </footer>
+
     <script type="text/javascript" src="./scripts/jquery-1.9.0.min.js"></script>
     <script type="text/javascript">
         $('#bandeau .fa-bars').click(function () {
