add css/html : edit slider

--- a/index.html
+++ b/index.html
@@ -39,12 +39,12 @@
             </div>
             <div id="visiter" class="nivo-html-caption">
                 <h2>VISITER LA FERME</h2>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eum corporis consectetur consequatur necessitatibus aut aliquid reiciendis sequi in provident, commodi ex voluptatem laudantium alias eos voluptatum ad ea molestiae maxime?</p>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eum corporis consectetur consequatur necessitatibus aut aliquid reiciendis sequi in provident</p>
                 <a href="#">VISITER</a>
             </div>
             <div id="louer" class="nivo-html-caption">
                 <h2>LOUER UN GITE</h2>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eum corporis consectetur consequatur necessitatibus aut aliquid reiciendis sequi in provident, commodi ex voluptatem laudantium alias eos voluptatum ad ea molestiae maxime?</p>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eum corporis consectetur consequatur necessitatibus aut aliquid reiciendis sequi in provident</p>
                 <a href="#">LOUER</a>
             </div>
         </div>
