--- a/visiter.html
+++ b/visiter.html
@@ -18,7 +18,7 @@
                     <li><a href="./index.html">Accueil<i class="fa-solid fa-chevron-right"></i></a></li>
                     <li><a href="./visiter.html">Visiter<i class="fa-solid fa-chevron-right"></i></a></li>
                     <li><a href="#">Hébergement<i class="fa-solid fa-chevron-right"></i></a></li>
-                    <li><a href="#">Contact<i class="fa-solid fa-chevron-right"></i></a></li>
+                    <li><a href="./contact.html">Contact<i class="fa-solid fa-chevron-right"></i></a></li>
                     <li><a href="#">Réserver en ligne<i class="fa-solid fa-chevron-right"></i></a></li>
                 </ul>
             </div>
@@ -57,7 +57,7 @@
                 <li><a href="./visiter.html">Visiter</a></li>
                 <li><a href="#">Hébergement</a></li>
                 <li><a href="#">Réserver en ligne</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="./contact.html">Contact</a></li>
             </ul>
         </div>
         <div id="legal">
