--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Visiter - La Ferme De Flo</title>
+    <title>Contact - La Ferme De Flo</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" />
     <link rel="stylesheet" href="./css/style.css">
 </head>
@@ -17,7 +17,7 @@
                     <li id="xmark1"><a href="#"><i class="fa-solid fa-xmark"></i></a></li>
                     <li><a href="./index.html">Accueil<i class="fa-solid fa-chevron-right"></i></a></li>
                     <li><a href="./visiter.html">Visiter<i class="fa-solid fa-chevron-right"></i></a></li>
-                    <li><a href="#">Hébergement<i class="fa-solid fa-chevron-right"></i></a></li>
+                    <li><a href="./hebergement.html">Hébergement<i class="fa-solid fa-chevron-right"></i></a></li>
                     <li><a href="./contact.html">Contact<i class="fa-solid fa-chevron-right"></i></a></li>
                     <li><a href="#">Réserver en ligne<i class="fa-solid fa-chevron-right"></i></a></li>
                 </ul>
@@ -73,7 +73,7 @@
             <ul>
                 <li><a href="./index.html">Accueil</a></li>
                 <li><a href="./visiter.html">Visiter</a></li>
-                <li><a href="#">Hébergement</a></li>
+                <li><a href="./hebergement.html">Hébergement</a></li>
                 <li><a href="#">Réserver en ligne</a></li>
                 <li><a href="./contact.html">Contact</a></li>
             </ul>
