--- a/hebergement.html
+++ b/hebergement.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Visiter - La Ferme De Flo</title>
+    <title>Hébergement - La Ferme De Flo</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" />
     <link rel="stylesheet" href="./css/style.css">
 </head>
@@ -27,23 +27,28 @@
     </header>
 
     <main class="container">
-        <div id="visiteparticulier">
-            <div id="contenu">
-                <h1>Visite de particulier</h1>
-                <p><strong>À la ferme de Flo'</strong>, vous découvrirez plus de <strong>300 animaux</strong>, dont la grande majorité sont des <strong>abandons</strong>. C'est triste mais une réalité! Cependant, grâce à la passion et au dévouement de la ferme, ces animaux retrouvent une <strong>deuxième chance</strong> et un foyer aimant.<br><br>La ferme est un havre de paix où chaque créature chèvre espiègle, cheval majestueux ou lapin timide reçoit les soins et l'attention nécessaires. Enfants et adultes repartent avec des souvenirs inoubliables et une meilleure compréhension de l'importance de la <strong>compassion</strong> envers les animaux.<br><br>C'est un lieu de partage, respect et amour, où chaque être vivant trouve sa place et sa dignité.
-                </p>
-                <img src="./images/visite_particulier.jpg" alt="2 enfants dans un tracteur">
-                <p>Au cours de cette <strong>visite pédagogique</strong>, vous serez accompagné par <strong>Flo' et/ou son équipe</strong> pour rencontrer les <strong>animaux</strong> (basse-cour, cochons d'inde, lapins, cochons, chèvres, vache, ânes, cheval...). Des activités ludiques vous permettront de comprendre le <strong>monde agricole</strong> et l'importance de la règle des <strong>3B (bien-être, bien vivre et bien manger)</strong>.<br>En plus des activités, des <strong>panneaux informatifs</strong> vous expliqueront chaque espèce animale et leur rôle dans la ferme. La visite se terminera par la <strong>boutique des producteurs</strong>, où vous pourrez découvrir et déguster des produits locaux : <strong>pâtes, bières, miel, œufs fermiers, légumes de saison</strong>.<br>Nous espérons que cette journée à la ferme vous laissera des souvenirs inoubliables et renforcera votre lien avec <strong>la nature et les animaux</strong>. Venez nombreux pour partager ce moment de <strong>découverte et de convivialité</strong> !</p>
-                <img src="./images/visite_particulier_2_3-2.jpg" alt="2 enfant avec un cochon">
-            </div>
-
-            <div class="pedago">
-                <h3>Visites pédagogique</h3>
-                <p>Venez en famille et/ou entre amis: <br> <br> -Visite de 1h30 à 8.80€ TTC par personne (Gratuit pour les enfants qui ne marche pas encore)<br> <br> -Supplément dégustation de produits locaux : 2.80€ par personne (sucré et salé)</p>
-            </div>
-        </div>
+        <a href="#" id="reserver">RÉSERVER</a>
+        <section id="heberg">
+            <article class="loc">
+                <img src="./images/chambre_double_vache_1_3-2.jpg" alt="Chambre rose avec un lit double">
+                <h3>Chambre double vache</h3>
+                <p>Une chambre chaleureuse située au premier étage, côté droit.<br>Ses fenêtres offrent une vue imprenable sur l'entrée de la ferme et ses activités.<br><br>En bonus, la location inclut une visite guidée d'1h30 de la ferme.</p>
+                <div class="spe">
+                    <i class="fa-solid fa-wifi"></i>
+                    <p>Wifi gratuit</p>
+                </div>
+                <div class="spe">
+                    <i class="fa-solid fa-bath"></i>
+                    <p>Baignoire</p>
+                </div>
+                <div class="spe">
+                    <i class="fa-solid fa-user-group"></i>
+                    <p>3</p>
+                </div>
+            </article>
+        </section>
     </main>
-    
+
     <footer class="container">
         <div id="planSite">
             <ul>
