--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                     <li id="xmark1"><a href="#"><i class="fa-solid fa-xmark"></i></a></li>
                     <li><a href="./index.html">Accueil<i class="fa-solid fa-chevron-right"></i></a></li>
                     <li><a href="./visiter.html">Visiter<i class="fa-solid fa-chevron-right"></i></a></li>
-                    <li><a href="#">Hébergement<i class="fa-solid fa-chevron-right"></i></a></li>
+                    <li><a href="./hebergement.html">Hébergement<i class="fa-solid fa-chevron-right"></i></a></li>
                     <li><a href="./contact.html">Contact<i class="fa-solid fa-chevron-right"></i></a></li>
                     <li><a href="#">Réserver en ligne<i class="fa-solid fa-chevron-right"></i></a></li>
                 </ul>
@@ -62,7 +62,7 @@
             <ul>
                 <li><a href="./index.html">Accueil</a></li>
                 <li><a href="./visiter.html">Visiter</a></li>
-                <li><a href="#">Hébergement</a></li>
+                <li><a href="./hebergement.html">Hébergement</a></li>
                 <li><a href="#">Réserver en ligne</a></li>
                 <li><a href="./contact.html">Contact</a></li>
             </ul>
