add css/html : mise en place du media sur le grid

--- a/hebergement.html
+++ b/hebergement.html
@@ -30,20 +30,101 @@
         <a href="#" id="reserver">RÉSERVER</a>
         <section id="heberg">
             <article class="loc">
-                <img src="./images/chambre_double_vache_1_3-2.jpg" alt="Chambre rose avec un lit double">
+                <figure id="vache" class="img"></figure>
                 <h3>Chambre double vache</h3>
                 <p>Une chambre chaleureuse située au premier étage, côté droit.<br>Ses fenêtres offrent une vue imprenable sur l'entrée de la ferme et ses activités.<br><br>En bonus, la location inclut une visite guidée d'1h30 de la ferme.</p>
-                <div class="spe">
-                    <i class="fa-solid fa-wifi"></i>
-                    <p>Wifi gratuit</p>
+                <div class="icone">
+                    <div class="spe">
+                        <i class="fa-solid fa-wifi"></i>
+                        <p>Wifi gratuit</p>
+                    </div>
+                    <div class="spe">
+                        <i class="fa-solid fa-bath"></i>
+                        <p>Baignoire</p>
+                    </div>
+                    <div class="spe">
+                        <i class="fa-solid fa-user-group"></i>
+                        <span>3</span>
+                    </div>
                 </div>
-                <div class="spe">
-                    <i class="fa-solid fa-bath"></i>
-                    <p>Baignoire</p>
+            </article>
+            <article class="loc">
+                <figure id="conf" class="img"></figure>
+                <h3>Gîte confort</h3>
+                <p>La grande maison est un gîte pour se retrouver en famille ou entre amis au cœur de la ferme de Flo'.<br><br>La visite découverte d’une heure trente est comprise dans la réservation.</p>
+                <div class="icone">
+                    <div class="spe">
+                        <i class="fa-solid fa-wifi"></i>
+                        <p>Wifi gratuit</p>
+                    </div>
+                    <div class="spe">
+                        <i class="fa-solid fa-bath"></i>
+                        <p>Baignoire</p>
+                    </div>
+                    <div class="spe">
+                        <i class="fa-solid fa-user-group"></i>
+                        <span>12</span>
+                    </div>
                 </div>
-                <div class="spe">
-                    <i class="fa-solid fa-user-group"></i>
-                    <p>3</p>
+            </article>
+            <article class="loc">
+                <figure id="chevre" class="img"></figure>
+                <h3>Chambre chèvre double</h3>
+                <p>Elle est située au premier étage à gauche de celle-ci. La fenêtre donne sur l’entrée de la ferme.<br><br>Une visite de 1h 30 de la ferme est compris dans la location. </p>
+                <div class="icone">
+                    <div class="spe">
+                        <i class="fa-solid fa-wifi"></i>
+                        <p>Wifi gratuit</p>
+                    </div>
+                    <div class="spe">
+                        <i class="fa-solid fa-user-group"></i>
+                        <span>2</span>
+                    </div>
+                </div>
+            </article>
+            <article class="loc">
+                <figure id="cochon" class="img"></figure>
+                <h3>Chambre double Cochon</h3>
+                <p>Une chambre au premier étage au fond de la mezzanine à droite. La fenêtre donnant sur la cour intérieur assure plus de calme.<br><br>Une visite de 1h 30 de la ferme est compris dans la location</p>
+                <div class="icone">
+                    <div class="spe">
+                        <i class="fa-solid fa-wifi"></i>
+                        <p>Wifi gratuit</p>
+                    </div>
+                    <div class="spe">
+                        <i class="fa-solid fa-user-group"></i>
+                        <span>3</span>
+                    </div>
+                </div>
+            </article>
+            <article class="loc">
+                <figure id="gite12" class="img"></figure>
+                <h3>Gite ou studio familiale</h3>
+                <p>Le Gite ou studio familiale Notre petite maison vous accueille pour une immersion totale dans une vraie ferme d' aujourd’hui.<br><br>La visite découverte d’une heure est comprise dans la réservation.</p>
+                <div class="icone">
+                    <div class="spe">
+                        <i class="fa-solid fa-wifi"></i>
+                        <p>Wifi gratuit</p>
+                    </div>
+                    <div class="spe">
+                        <i class="fa-solid fa-user-group"></i>
+                        <span>5</span>
+                    </div>
+                </div>
+            </article>
+            <article class="loc">
+                <figure id="coq" class="img"></figure>
+                <h3>Chambre COQ double</h3>
+                <p>La chambre Coq Au rez de chaussée.<br><br>Une visite de 1h 30 de la ferme est compris dans la location</p>
+                <div class="icone">
+                    <div class="spe">
+                        <i class="fa-solid fa-wifi"></i>
+                        <p>Wifi gratuit</p>
+                    </div>
+                    <div class="spe">
+                        <i class="fa-solid fa-user-group"></i>
+                        <span>2</span>
+                    </div>
                 </div>
             </article>
         </section>
